# 2025_july_lokalise_integration

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.celery  pyproject.toml  pytest.ini  requirements.txt
backend/core/: settings.py  urls.py
backend/core/statics/: glossary.json
backend/tests/: conftest.py  test_bleu_scorer.py  test_lokalise_service.py  test_translation_pipeline.py  test_translation_service.py  test_views.py
backend/translation_service/: serializers.py  urls.py  validators.py  views.py
backend/translation_service/services/: __init__.py  lokalise_service.py  translation_pipeline.py  translation_service.py
backend/translation_service/utils/: bleu_scorer.py  excel_to_json.py
frontend/: .dockerignore  .npmrc  Dockerfile  nuxt.config.ts  package-lock.json  package.json  tsconfig.node.json
frontend/app/: app.vue
frontend/components/: FileUpload.vue  TranslationPipeline.vue
frontend/constants/: languages.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/stores/: translation.ts  translationPipeline.ts
